<resources>
    <string name="app_name">ToDo List</string>
    <string name="add_note_button">Add note button</string>
    <string name="enter_note">Enter note:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save">SAVE</string>
    <string name="note_content_is_required">Note content is required!!!</string>
</resources>